# CircuitGen

./: .gitignore  CMakeLists.txt  CircuitGen.sql  GraphAbcFolder.hpp  README.md  architecture.drawio  buildGenerator.sh  document.env  install_pgadmin.sh  install_postgresql_pgadmin.sh  main.cpp  oldBuild.sh  requirements.txt  test.txt
Generator/: CMakeLists.txt  main.cpp
Generator/Generator/: GraphAbcFolder.hpp  benchmarks.cpp  easylogging++.conf
add_parameter/: models.py
django_project/: urls.py
frontend/src/components/: Comparsion.js  GraphML.js  Parameter.js  RandLevel.js  Scheme.js  Subtractor.js  Summator.js  ToggleSwitch.js  TruthTable.js
frontend/src/pages/: AddParameter.js  MainPage.js
frontend/src/scss/: AddParameter.scss  page.scss
json_examples/: sampleRandLevelExperimental.json  sampleTruthTable.json  testRandLevel.json
make_dataset/: views.py
server/: manage.py
server/add_parameter/: models.py
server/django_project/: .gitignore  settings.py
server/make_dataset/: logconfig.py  views.py
